Fixes: Layout Issues

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -95,6 +95,10 @@
         margin-left: 40px;
     }
 
+    .window__main__navbar {
+        margin-left: 40px;
+    }
+
     .window__footer {
         margin-left: 40px;
     }
